# repo-cloner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  sync.yml
docs/: GROUP_MAPPING_DESIGN.md  WORKFLOWS.md
examples/: README.md
examples/configs/: advanced-sync.yml  air-gap-with-monitoring.yml  env-var-examples.yml  flatten-strategy.yml  multi-group-sync.yml  prefix-strategy.yml  production-sync-with-logging.yml  simple-sync.yml
examples/github-actions/: README.md  config-bidirectional.yml  config-gitlab-to-github.yml  config-with-s3-backup.yml
examples/workflows/: air-gap-archive-create.py  air-gap-archive-restore.py  gitlab-to-github-sync.py
src/repo_cloner/: __main__.py  archive_manager.py  auth_manager.py  cli.py  concurrent_cloner.py  config_loader.py  config_loader_enhanced.py  dependency_detector.py  exceptions.py  git_client.py  github_client.py  gitlab_client.py  group_mapper.py  large_repo_handler.py  lfs_detector.py  lfs_handler.py  lfs_sync.py  logging_config.py  metadata_mapper.py  pypi_client.py  python_parser.py  retry.py  state_manager.py  storage_backend.py  sync_engine.py  sync_orchestrator.py
tests/integration/: test_clone_and_push.py  test_discovery_flow.py  test_group_mapping.py  test_sync_flow.py  test_workflows.py
tests/unit/: test_archive_lfs_bundling.py  test_archive_manager.py  test_archive_retention.py  test_archive_storage_integration.py  test_archive_verification.py  test_auth_manager.py  test_azure_blob_backend.py  test_cli_archive.py  test_cli_main.py  test_concurrent_cloner.py  test_config_loader.py  test_config_loader_enhanced.py  test_dependency_archive_integration.py  test_dependency_detector.py  test_env_var_substitution.py  test_exceptions.py  test_flatten_mapping.py  test_gcs_backend.py  test_git_client.py  test_github_actions_workflow.py  test_github_client.py  test_gitlab_client.py  test_group_mapper.py  test_incremental_archive.py  test_large_repo_handler.py  test_lfs_detector.py  test_lfs_handler.py  test_lfs_sync.py  test_local_filesystem_backend.py  test_logging.py  test_metadata_mapper.py  test_oci_backend.py  test_prefix_mapping.py  test_pypi_client.py  test_python_parser.py  test_retry.py  test_s3_backend.py  test_s3_compatible_backend.py  test_state_manager.py  test_sync_engine.py  (+1 more)
